# IPyMolSysView

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  NOTES.md  README.md  codecov.yml  install.json  ipymolsysview.json  package.json  pyproject.toml  pytest.ini
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
ipymolsysview/: __init__.py  _frontend.py  _version.py  widget.py
ipymolsysview/nbextension/: extension.js
ipymolsysview/tests/: conftest.py  test_example.py  test_nbextension_path.py
js/: package.json  webpack.config.js
js/docs/source/_static/: embed-bundle.js  embed-bundle.js.map
js/ipymolsysview/nbextension/: index.js  index.js.map
js/src/: plugin.ts  version.ts
src/: extension.ts  index.ts  widget.ts
