[build-system]
requires = [
    "hatchling>=1.6.0",
    "jupyterlab==4.*",
]
build-backend = "hatchling.build"

[project]
name = "ipymolsysview"
description = "A Custom Jupyter Widget Library"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
authors = [
    { name = "Diego Prada", email = "me@me.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
]
version = "0.1.0.dev0"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/UIBCDF/IPyMolSysView"

[tool.hatch.build]
artifacts = [
    "ipymolsysview/nbextension/index.*",
    "ipymolsysview/labextension/*.tgz",
    "ipymolsysview/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipymolsysview/nbextension" = "share/jupyter/nbextensions/ipymolsysview"
"ipymolsysview/labextension" = "share/jupyter/labextensions/ipymolsysview"
"./install.json" = "share/jupyter/labextensions/ipymolsysview/install.json"
"./ipymolsysview.json" = "etc/jupyter/nbconfig/notebook.d/ipymolsysview.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "ipymolsysview/nbextension/index.js",
    "ipymolsysview/labextension/package.json",
]
skip-if-exists = [
    "ipymolsysview/nbextension/index.js",
    "ipymolsysview/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.2",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "ipymolsysview/_version.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
